# gimli

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  noxfile.py  pyproject.toml  requirements.in  setup.cfg  setup.py
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: config.yml  default.md  release.md
.github/workflows/: flake8.yml  prerelease.yml  pypi.yml  release.yml  test.yml
gimli/: __init__.py  _udunits2.c  _udunits2.pyx  cli.py  errors.py  utils.py
src/gimli/: __init__.py  __main__.py  _api.py  _constants.py  _main.py  _system.py  _udunits2.pyx  _utils.py  _version.py  cli.py  errors.py  main.py  units.py  utils.py
tests/: api_test.py  cli_test.py  errors_test.py  test_cli.py  test_units.py  units_test.py
