[metadata]
name = gimli.units
version = 0.3.1.dev0
description = An object-oriented Python interface to udunits2
long_description = file: README.rst, AUTHORS.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = units, unit conversion, earth science, model coupling
author = Eric Hutton
author_email = huttone@colorado.edu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Physics
url = https://csdms.colorado.edu
project_urls =
    Source Code = https://github.com/mcflugen/gimli

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    click
    numpy

[options.entry_points]
console_scripts =
    gimli = gimli.cli:gimli

[options.packages.find]
exclude = tests*

[flake8]
exclude = docs
ignore =
	E203
	E501
	W503
max-line-length = 88

[zest.releaser]
tag-format = v{version}
